[package]
name = "keyz_rust_client"
version = "1.0.0"
edition = "2021"
description = "Official Keyz client for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full", "time"] }