[package]
name = "keyz_rust_client"
version = "1.0.1"
edition = "2021"
description = "keyz client for Rust"
license = "MIT"
repository = "https://github.com/viktor111/keyz_rust_client.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full", "time"] }